- Fix class image on PHP 8+ and no exif extension
- Fix installation error on subfolder (#3537)
- Block direct access to sitemap link
- Removed strftime function as it was deprecated since PHP 8.1
- Add Cookies sharing management feature for subdomains
- Fix view topic module news
- Block index search result page
- PHPMailer v6.8
- Ckeditor v4.21.0
- Jquery v3.6.4
- DOMPurify 3.0.2

NUKEVIET 4.4.06:
- Fix sorting topic module news (#3521), fix error in view topic (#3520)
- Switch from RedirectMatch to RewriteRule to support OpenLiteSpeed
- Optimally compatible with PHP 8.1
- Change login cookie name to dynamic
- Fix Session Fixation
- Displays a warning that the list of APIs does not exist in Api-role
- Add filter tags, attributes, styles, css in the editor (#3422)
- Bug fix WAF bypass xss
- Fix class Http
- Module news: Add manage reading articles (#3492)
- Fix bug can't scroll down on mobile
- Fix rss logo size

NUKEVIET 4.4.05:
- Fix redirects in banners module
- RSS-Feed: Show atom:link only when it is defined
- Fix the error of displaying the statistics chart of the module banners
- Fix search error in module news (#3452)
- Fix login error via facebook, google (#3445)
- Fix XSS bug (CVE-2022-30874). Thanks Dawid Bakaj from WhiteHub#2968
- Fix Error cannot create firewall account (#3403)
- Redefine host, port, client-side protocol if forwarded
- Fix image upload error (#3386)
- Add API authentication method: none

NUKEVIET 4.4.04:
- Add sending mail when adding/removing oauth for admin (#3016)
- System package addition: tecnickcom/tc-lib-barcode (v1.17.6)
- System package updates: polyfill-mbstring (v1.23.0 => v1.18.1, for PHP ^5.6 support), phpmailer/phpmailer (v6.5.0 => v6.5.1)
- System package removal: symfony/options-resolver, endroid/qrcode
- All modules: Fix $page_url definition
- System: Fix error in getCanonicalUrl function

NUKEVIET 4.4.03
- Add API manager